# calypsonet-terminal-calypso-cpp-api

./: CMakeLists.txt  CNAME  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  list_versions.md
src/main/: CMakeLists.txt  CalypsoApiProperties.h  GetDataTag.h  SearchCommandData.h  SelectFileControl.h  WriteAccessLevel.h
src/main/card/: CalypsoCard.h  CalypsoCardSelection.h  DirectoryHeader.h  ElementaryFile.h  FileData.h  FileHeader.h  SvDebitLogRecord.h  SvLoadLogRecord.h
src/main/sam/: CalypsoSaSelection.h  CalypsoSam.h
src/main/spi/: SamRevocationServiceSpi.h
src/main/transaction/: AtomicTransactionException.h  AuthenticationNotVerifiedException.h  BasicSignatureComputationData.h  BasicSignatureVerificationData.h  CardAnomalyException.h  CardCloseSecureSessionException.h  CardIOException.h  CardRevokedException.h  CardSecuritySetting.h  CardSignatureNotVerifiableException.h  CardTransactionException.h  CardTransactionManager.h  CommonSecuritySetting.h  CommonSecuritySettings.h  CommonSignatureComputationData.h  CommonSignatureVerificationData.h  CommonTransactionManager.h  DesynchronizedExchangesException.h  InconsistencyDataException.h  InconsistentDataException.h  InvalidCardSignatureException.h  InvalidSignatureException.h  ReaderIOException.h  SamAnomalyException.h  SamIOException.h  SamRevokedException.h  SamSecuritySetting.h  SamTransactionManager.h  SearchCommandData.h  SecurityException.h  SelectFileException.h  SessionAuthenticationException.h  SessionBufferOverflowException.h  SignatureComputationData.h  SignatureVerificationData.h  SvAction.h  SvAuthenticationException.h  SvOperation.h  TraceableSignatureComputationData.h  (+3 more)
(+1532 files in other folders)
